seldon/hallo-gateway.yaml
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: seldon-gateway
#spec:
#  selector:
#    istio: ingressgateway # use istio default controller
#  servers:
#  - port:
#      number: 80
#      name: http
#      protocol: HTTP
#    hosts:
#    - "*"
#---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: halloworld
spec:
  hosts:
  - "*"
  gateways:
  - seldon-gateway
  http:
  - match:
      - uri:
          prefix: /mia/
      rewrite:
        uri: /
    route:
    - destination:
        host: halloworld
        port:
          number: 5000
